set
n1nj4h@n1nj4h:~$ python
Python 3.7.2 (default, Nov  2 2020, 21:05:46)
[GCC 8.3.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> drinks = {
... 'martini': {'vodka', 'vermouth'},
... 'black russian': {'vodka', 'kahlua'},
... 'white russian': {'cream', 'kahlua', 'vodka'},
... 'manhattan': {'rye', 'vermouth', 'bitters'},
... 'screwdriver': {'orange juice', 'vodka'}
... }
>>> drinks
{'martini': {'vodka', 'vermouth'}, 'black russian': {'vodka', 'kahlua'}, 'white russian': {'cream', 'vodka', 'kahlua'}, 'manhattan': {'rye', 'vermouth', 'bitters'}, 'screwdriver': {'orange juice', 'vodka'}}
>>> for name, contents in drinks.items():
...     if 'vodka' in contents:
...             print(name)
...
martini
black russian
white russian
screwdriver
>>> for name, contents in drinks.items():
...     if 'vodka' in contents and not ('vermouth' in contents or 'cream' in contents):
...             print(name)
...
black russian
screwdriver
>>> for name, contents in drinks.items():
...     if contents & {'vermouth', 'orange juice'}:
...             print(name)
...
martini
manhattan
screwdriver
>>> bruss = drinks['black russian'}
  File "<stdin>", line 1
    bruss = drinks['black russian'}
                                  ^
SyntaxError: invalid syntax
>>> bruss = drinks['black russian']
>>> wruss = drinks['white russian']
>>> a = {1,2}
>>> b = {2,3}
>>> a & b
{2}
>>> a.intersection(b)
{2}
>>> bruss & wruss
{'vodka', 'kahlua'}
>>> a | b
{1, 2, 3}
>>> a.union(b)
{1, 2, 3}
>>> bruss | wruss
{'cream', 'kahlua', 'vodka'}
>>> a - b
{1}
>>> a.difference(b)
{1}
>>> bruss - wruss
set()
>>> wruss - bruss
{'cream'}
>>> a ^ b
{1, 3}
>>> a.symmetric_difference(b)
{1, 3}
>>> bruss ^ wruss
{'cream'}
>>> a <= b
False
>>> a.issubset(b)
False
>>> bruss <= wruss
True
>>> a <= a
True
>>> a.issubset(a)
True
>>> a >= b
False
>>> a.issuperset(b)
False
>>> wruss >= bruss
True
>>> wruss >= bruss
True
>>> a >= a
True
>>> a.issuperset(a)
True
>>> a > b
False
>>> wruss > bruss
True
>>> a > a
False
